kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: wanderlust-ingress
  namespace: wanderlust

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - host: wanderlust.local

      http:
        paths:

          # Frontend
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend
                port:
                  number: 80

          # Backend APIs
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend
                port:
                  number: 5000
